--- a/tech.html
+++ b/tech.html
@@ -583,7 +583,7 @@
                     <div class="add-on-icon">🌍</div>
                     <h3>Multi-language Support</h3>
                     <p>Support for 50+ languages including Spanish, French, German, Chinese, and Japanese. Perfect for international students.</p>
-                    <span class="add-on-badge">Available</span>
+                    <span class="add-on-badge">Coming Soon</span>
                 </div>
 
                 <div class="add-on-card">
@@ -597,14 +597,14 @@
                     <div class="add-on-icon">🧠</div>
                     <h3>Adaptive Learning</h3>
                     <p>AI that learns your study patterns and adapts content difficulty and recommendations to your learning style.</p>
-                    <span class="add-on-badge">Beta</span>
+                    <span class="add-on-badge">Coming Soon</span>
                 </div>
 
                 <div class="add-on-card">
                     <div class="add-on-icon">☁️</div>
                     <h3>Cloud Storage</h3>
                     <p>Unlimited cloud storage for your notes, recordings, and study materials. Sync across all your devices.</p>
-                    <span class="add-on-badge">Available</span>
+                    <span class="add-on-badge">Coming Soon</span>
                 </div>
             </div>
         </div>
@@ -657,3 +657,4 @@
     </footer>
 </body>
 </html>
+
