--- a/tech.html
+++ b/tech.html
@@ -543,7 +543,7 @@
                         <li class="tech-item">
                             <div class="tech-icon">P</div>
                             <div>
-                                <div class="tech-name">PostgreSQL</div>
+                                <div class="tech-name">MongoDB</div>
                                 <div class="tech-description">Primary database</div>
                             </div>
                         </li>
@@ -657,4 +657,5 @@
     </footer>
 </body>
 </html>
+
 
